src/objects/Line_item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_statement__c</fullName>
        <label>Invoice statement</label>
        <referenceTo>Invoice_statement__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_sold__c</fullName>
        <label>Units sold</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>Unit_Price__c  *  Units_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>merchandise__c</fullName>
        <label>merchandise</label>
        <referenceTo>merchandise__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Line item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_in_Stock</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
ISNEW(),
merchandise__r.Total_Inventory__c &lt; Units_sold__c ,
IF (
Units_sold__c &lt; PRIORVALUE(Units_sold__c),
FALSE,
merchandise__r.Total_Inventory__c &lt; (Units_sold__c - PRIORVALUE(Units_sold__c))
)
)</errorConditionFormula>
        <errorMessage>You have ordered more items than the items in stock.</errorMessage>
    </validationRules>
</CustomObject>